added room and analytics manager and unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,25 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/.gitignore
+/.idea/.name
+/.idea/AndroidProjectSystem.xml
+/.idea/compiler.xml
+/.idea/deploymentTargetSelector.xml
+/.idea/gradle.xml
+/.idea/kotlinc.xml
+/.idea/migrations.xml
+/.idea/misc.xml
+/.idea/runConfigurations.xml
+/.idea/vcs.xml
+/.kotlin/errors/errors-1746700287482.log
+/.kotlin/errors/errors-1746700287520.log
+/.kotlin/errors/errors-1746721480327.log
+/.kotlin/errors/errors-1746721480374.log
+/.kotlin/errors/errors-1746721714451.log
+/.kotlin/errors/errors-1746721714479.log
+/.kotlin/errors/errors-1746742344403.log
+/.kotlin/errors/errors-1746742385739.log
+/.kotlin/errors/errors-1746742423864.log
+/.kotlin/errors/errors-1746867922738.log
