--- a/local.properties
+++ b/local.properties
@@ -21,6 +21,6 @@ sdk.dir=C\:\\Users\\ali.anikaydin\\AppData\\Local\\Android\\Sdk
 
 
 
-#  Normally I don't load this file to github to secure the api keys
-#  I uploaded it once so that you can run the code and generate apk
+#  Normally I don't load this file and google-services.json to github to secure the api keys
+#  I uploaded it once so that you can run the code and generate apk easily.
 API_KEY=b3728a902f391e9a445e8065c1ecdfbc
